Complete Footer section

--- a/src/App.css
+++ b/src/App.css
@@ -41,4 +41,12 @@
   color: #888;
 } */
 
-
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 317px;
+  height: 780px;
+  background-color: #1A1B21;
+  border-radius: 15px;
+}
